# RMC-Mobile-Android

./: build.gradle  config.build  gradle.properties  nextlabs-skydrm-release-key.jks  settings.gradle
hoops/: CMakeLists.txt  build.gradle
hoops/src/main/: AndroidManifest.xml
hoops/src/main/cpp/: AndroidMobileSurfaceViewJNI.cpp  AndroidUserMobileSurfaceViewJNI.cpp  MobileAppJNI.cpp  OnLoadJNI.cpp  jpaths.h
hoops/src/main/java/com/skydrm/hoops/: AndroidMobileSurfaceView.java  AndroidUserMobileSurfaceView.java  MobileApp.java  ViewerUtils.java
hoops/src/main/res/layout/: hsffile_row.xml  keyboard_trigger.xml  operators.xml
hoops/src/main/res/menu/: toolbars.xml
hoops/src/main/res/values/: strings.xml
skydrmsdk/: CMakeLists.txt  build.gradle
skydrmsdk/src/androidTest/java/com/skydrm/sdk/rms/: NxlTest.java  RestAPITest.java
skydrmsdk/src/main/: AndroidManifest.xml
skydrmsdk/src/main/assets/rms/ui/app/: login.min.js
skydrmsdk/src/main/assets/rms/ui/app/i18n/: en.json
skydrmsdk/src/main/assets/rms/ui/css/: login.min.css
skydrmsdk/src/main/cpp/: com_skydrm_sdk_nxl_NxlFileHandler.cpp  com_skydrm_sdk_nxl_NxlFileHandler.h
skydrmsdk/src/main/java/com/skydrm/sdk/: Config.java  Factory.java  INxlClient.java  INxlExpiry.java  INxlFileFingerPrint.java  INxlObligations.java  INxlRights.java  INxlTags.java  INxlTenant.java  IRecipients.java
skydrmsdk/src/main/java/com/skydrm/sdk/exception/: NotGrantedShareRights.java  NotNxlFileException.java  RightsExpiredException.java  RmsRestAPIException.java  TokenAccessDenyException.java
skydrmsdk/src/main/java/com/skydrm/sdk/nxl/: CryptoBlob.java  FileInfo.java  NxlFileHandler.java  NxlFingerPrint.java  PolicyInfo.java
skydrmsdk/src/main/java/com/skydrm/sdk/nxl/token/: DecryptToken.java  EncryptToken.java  IToken.java  ITokenService.java  SecureToken.java  TokenException.java  TokenService.java
skydrmsdk/src/main/java/com/skydrm/sdk/policy/: AdhocPolicy.java  CentralPolicy.java  Expiry.java  Obligations.java  Policy.java  Rights.java  Tags.java  Watermark.java
skydrmsdk/src/main/java/com/skydrm/sdk/policy/internal/: Constant.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/: NxlClient.java  NxlTenant.java  RestAPI.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/: IClassificationProfileService.java  IConvertFileService.java  IFavoriteService.java  IHeartbeatService.java  ILogService.java  ILoginService.java  IMembershipService.java  IMyDriveService.java  IMyVaultService.java  IPolicyEvaluationService.java  IProjectService.java  IRemoteViewService.java  IRepositoryService.java  ISharedWithMeService.java  ISharedWithSpaceService.java  ISharingService.java  ITenantService.java  ITokenService.java  IUserService.java  IWorkSpaceService.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/centralpolicy/: ClassificationProfileService.java  PolicyEvaluationService.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/common/: Favorite.java  Log.java  Sharing.java  Token.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/myVault/: MyVaultDownloadHeader.java  MyVaultFileListResult.java  MyVaultListFileRequestParas.java  MyVaultMetaDataResult.java  MyVaultService.java  MyVaultUploadFileParams.java  MyVaultUploadFileResult.java  UpdateRecipientsResult.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/project/: AllProjectsResult.java  CreateProjectResult.java  FileMetadata.java  GetProjectMetadataResult.java  ListPendingInvitationResult.java  ListProjectItemResult.java  ProjectMetaDataResult.java  ProjectService.java  ReShareResult.java  ReclassifyResult.java  ShareFileResult.java  UpdateProjectResult.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/repository/: MyDrive.java  Repository.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/sharedwithspace/: FileMetadata.java  ListFileParams.java  ListFileResult.java  ReShareFileResult.java  SharedWithSpaceService.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/sharewithme/: SharedWithMeListFileRequestParams.java  SharedWithMeListFileResult.java  SharedWithMeReshareResult.java  SharedWithMeService.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/rest/tenant/: TenantAdminResult.java  (+2 more)
skydrmsdk/src/main/java/com/skydrm/sdk/rms/types/: ClassificationProfileRetrieveResult.java  FetchLogRequestParas.java  FetchLogResult.java  HeartbeatResponse.java  PolicyEvaluationParams.java  PolicyEvaluationResult.java  RemoteViewProjectFileParas.java  RemoteViewRepoFileParas.java  RemoteViewResult2.java  RmsAddRepoResult.java  RmsRepoInfo.java  RmsUserLinkedRepos.java  SendLogRequestValue.java  SharingLocalFilePara.java  SharingRepoFileParas.java  SharingRepoFileResult.java  UpdateProjectRecipientsResult.java
skydrmsdk/src/main/java/com/skydrm/sdk/rms/user/: IRmUser.java  RmUser.java
skydrmsdk/src/main/java/com/skydrm/sdk/ui/: LoginActivity.java
skydrmsdk/src/main/java/com/skydrm/sdk/ui/uploadprogress/: ProgressHelper.java  ProgressRequestBody.java  ProgressRequestListener.java
skydrmsdk/src/main/java/com/skydrm/sdk/utils/: CheckVersion.java  ConvertProgress.java  CsvWriter.java  DevLog.java  NxCommonUtils.java  ParseJsonUtils.java
skydrmsdk/src/main/res/drawable/: progress_bar_style.xml  relative_layout_style.xml
skydrmsdk/src/main/res/layout/: activity_login.xml  login_edit.xml
skydrmsdk/src/main/res/values/: strings.xml
skydrmsdk/src/test/java/com/skydrm/sdk/: ExampleUnitTest.java
(+1354 files in other folders)
